--- a/HTML/Final_Project/page2.html
+++ b/HTML/Final_Project/page2.html
@@ -18,7 +18,7 @@
                      <h2 style="color:white">My second dream job is to be a psychiatrist. 
                      The reason that I want to do this is because I want to help people
                      better understand their situations and help them.</h2>
-                    <img scr="https://lh3.google.com/u/0/d/0B7MRl4Xz4d3ydTZISU9DSEZCa2I3NW1IZ0k0Qk1EWnV3eXZV=w1920-h885-iv1">
+                    <img scr="https://raw.githubusercontent.com/aflores182/ecs71718/master/HTML/Final_Project/images/IMG_9182%20(1).jpg">
             </center>
             </style>
         </body>
