--- a/HTML/Final_Project/page2.html
+++ b/HTML/Final_Project/page2.html
@@ -15,10 +15,17 @@
                         going to be tedious because you have to be very focused and steady,
                         but I know that if I work hard, I will be able to get there.</h2>
                      <img src="https://lh3.google.com/u/0/d/0B7MRl4Xz4d3yTWtiMm9OV3B5ZTFTMTFidktraHJZRVdYazc4=w1907-h891-iv1"> 
+                      <hr/>
                      <h2 style="color:white">My second dream job is to be a psychiatrist. 
                      The reason that I want to do this is because I want to help people
                      better understand their situations and help them.</h2>
-                    <img scr="https://raw.githubusercontent.com/aflores182/ecs71718/master/HTML/Final_Project/images/IMG_9182%20(1).jpg">
+                    <img scr="https://raw.githubusercontent.com/aflores182/ecs71718/master/HTML/Final_Project/images/IMG_9182%20(1).jpg" width=260 height= 270>
+                <hr/>
+                    <h2 style="color:white">Anything that would have to fo with the 
+                    brain would be facinating to me. There is so much that the brain
+                    could do and knowing how it works would be amazing. I see myslef
+                    happily doing something with the brain for the rest of my life.</h2>
+            
             </center>
             </style>
         </body>
