--- a/HTML/Final_Project/page2.html
+++ b/HTML/Final_Project/page2.html
@@ -3,7 +3,75 @@
         <head>
             <title>Alexandria Flores</title>
             <style>
-                body {background-color: #CDCDCD; }
+                body {background-color: #CDCDCD; 
+            font-family: "Fantasy", papyrus;
+}
+
+            .sidenav {
+                height: 100%;
+                width: 0;
+                position: fixed;
+                z-index: 1;
+                top: 0;
+                left: 0;
+                background-color: #96858F;
+                overflow-x: hidden;
+                transition: 0.5s;
+                padding-top: 60px;
+  
+                }
+    
+                .sidenav a {
+                 padding: 8px 8px 8px 32px;
+                 text-decoration: none;
+                 font-size: 25px;
+                 color: #818181;
+                 display: block;
+                 transition: 0.3s;
+                }
+
+        .sidenav a:hover {
+         color: white;
+}
+
+         .sidenav .closebtn {
+         position: absolute;
+        top: 0;
+        right: 25px;
+        font-size: 36px;
+        margin-left: 50px;
+}
+
+@media screen and (max-height: 450px) {
+  .sidenav {padding-top: 15px;}
+  .sidenav a {font-size: 18px;}
+}
+</style>
+
+
+</head>
+          <body>
+          <div id="mySidenav" class="sidenav">
+          <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+          <a href="https://aflores182.github.io/ecs71718/HTML/Final_Project/#">Home</a>
+          <a href="#">Dream Job <text-color;"white"></text-color></a>
+          <a href="#">Future tattoos</a>
+          <a href="#">Bucket List</a>
+</div>
+
+
+<span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; open</span>
+
+<script>
+function openNav() {
+    document.getElementById("mySidenav").style.width = "250px";
+}
+
+function closeNav() {
+    document.getElementById("mySidenav").style.width = "0";
+}
+</script>
+                
             </style>
         </head>
         <body>
