--- a/HTML/Final_Project/index.html
+++ b/HTML/Final_Project/index.html
@@ -57,9 +57,8 @@ body {
           <div id="mySidenav" class="sidenav">
           <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
           <a href="https://aflores182.github.io/ecs71718/HTML/Final_Project/#">Home</a>
-          <a href="#">Dream Job <text-color;"white"></text-color></a>
+          <a href="https://aflores182.github.io/ecs71718/HTML/Final_Project/page2.html/#">Dream Job <text-color;"white"></text-color></a>
           <a href="#">Future tattoos</a>
-          <a href="#">Bucket List</a>
 </div>
 
 
